13 November 2009: Wouter
	- Fixed validation failure for CNAME to optout NSEC3 nodata answer.
	- unbound-host does not fail on type ANY.
	- Fixed wireparse failure to put RRSIGs together with data in some
	  long ANY mix cases, which fixes validation failures.

12 November 2009: Wouter
	- iana portlist updated.
	- fix manpage errors reported by debian lintian.
	- review comments.
	- fixup very long vallog2 level error strings.
	
11 November 2009: Wouter
	- ldns tarball updated (to 1.6.2).
	- review comments.

10 November 2009: Wouter
	- Thanks to Surfnet found bug in new dnssec-retry code that failed
	  to combine well when combined with DLV and a particular failure. 
	- Fixed unbound-control -h output about argument optionality.
	- review comments.

5 November 2009: Wouter
	- lint fixes and portability tests.
	- better error text for multiple domain keys in one autotrust file.

2 November 2009: Wouter
	- Fix bug where autotrust does not work when started with a DS.
	- Updated GOST unit tests for unofficial algorithm number 249
	  and DNSKEY-format changes in draft version -01.

29 October 2009: Wouter
	- iana portlist updated.
	- edns-buffer-size option, default 4096.
	- fixed do-udp: no.

28 October 2009: Wouter
	- removed abort on prealloc failure, error still printed but softfail.
	- iana portlist updated.
	- RFC 5702: RSASHA256 and RSASHA512 support enabled by default.
	- ldns tarball updated (which also enables rsasha256 support).

27 October 2009: Wouter
	- iana portlist updated.

8 October 2009: Wouter
	- please doxygen
	- add val-log-level print to corner case (nameserver.epost.bg).
	- more detail to errors from insecure delegation checks.
	- Fix double time subtraction in negative cache reported by 
	  Amanda Constant and Hugh Mahon.
	- Made new validator error string available from libunbound for
	  applications.  It is in result->why_bogus, a zero-terminated string.
	  unbound-host prints it by default if a result is bogus.