@@ -1,3 +1,9 @@
+16 November 2009: Wouter
+	- Fixed signer detection of CNAME responses without signatures.
+	- Fix#282 libunbound memleak on error condition by Eric Sesterhenn.
+	- Tests for CNAMEs to deeper trust anchors, secure and bogus.
+	- svn tag 1.4.0rc1 made.
+
 13 November 2009: Wouter
 	- Fixed validation failure for CNAME to optout NSEC3 nodata answer.
 	- unbound-host does not fail on type ANY.
